--- a/index.html
+++ b/index.html
@@ -3,348 +3,76 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Toko Baju — Display Produk Modern</title>
-  <style>
-    :root{
-      --cream:#FFF7E6;
-      --white:#FFFFFF;
-      --brown:#8B5E3C;
-      --brown-dark:#5a3f2b;
-      --muted:#9b8b80;
-      --card-shadow: 0 6px 18px rgba(88,66,50,0.08);
-      --glass: rgba(255,255,255,0.6);
-      font-family: Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-    }
-    *{box-sizing:border-box}
-    body{
-      margin:0;
-      background: linear-gradient(180deg,var(--cream) 0%, #fff 40%);
-      color:var(--brown-dark);
-      -webkit-font-smoothing:antialiased;
-      -moz-osx-font-smoothing:grayscale;
-      min-height:100vh;
-    }
-
-    header{
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      gap:1rem;
-      padding:1.25rem 2rem;
-      background:transparent;
-    }
-
-    .brand{
-      display:flex;align-items:center;gap:.75rem;
-    }
-    .logo{
-      width:52px;height:52px;border-radius:12px;background:linear-gradient(135deg,var(--brown) 0%, var(--brown-dark) 100%);
-      display:flex;align-items:center;justify-content:center;color:var(--cream);font-weight:700;font-size:18px;box-shadow:var(--card-shadow)
-    }
-    .brand h1{font-size:18px;margin:0}
-    .brand p{margin:0;font-size:12px;color:var(--muted)}
-
-    .controls{
-      display:flex;align-items:center;gap:.75rem
-    }
-    .search{
-      display:flex;align-items:center;background:var(--white);padding:.5rem .75rem;border-radius:12px;box-shadow:var(--card-shadow);gap:.5rem;width:320px;
-    }
-    .search input{border:0;outline:none;background:transparent;font-size:14px;width:100%}
-
-    .btn{background:var(--brown);color:var(--cream);border:0;padding:.6rem .9rem;border-radius:10px;font-weight:600;cursor:pointer;box-shadow:0 6px 18px rgba(139,94,60,0.12)}
-
-    .cart{
-      position:relative;display:flex;align-items:center;gap:.5rem;background:var(--white);padding:.4rem .6rem;border-radius:12px;box-shadow:var(--card-shadow);cursor:pointer
-    }
-    .cart .count{position:absolute;right:-6px;top:-6px;background:#f43f5e;color:white;border-radius:999px;padding:2px 6px;font-size:12px}
-
-    main{padding:1rem 2rem 3rem}
-    .hero{
-      display:flex;align-items:center;justify-content:space-between;gap:1rem;padding:1.25rem;border-radius:16px;margin-bottom:1rem;background:linear-gradient(90deg,var(--white),rgba(255,255,255,0.85));box-shadow:var(--card-shadow);
-    }
-    .hero .text h2{margin:0;font-size:22px}
-    .hero .text p{color:var(--muted);margin:.5rem 0 0}
-
-    .filters{display:flex;align-items:center;gap:.75rem}
-    .chip{background:transparent;border:1px solid rgba(90,63,43,0.08);padding:.4rem .6rem;border-radius:999px;font-size:13px;cursor:pointer}
-    .chip.active{background:var(--brown);color:var(--cream);border-color:transparent}
-
-    .grid{
-      display:grid;grid-template-columns:repeat(auto-fill,minmax(220px,1fr));gap:1rem;margin-top:1rem
-    }
-
-    .card{
-      background:var(--white);border-radius:14px;padding:12px;box-shadow:var(--card-shadow);position:relative;overflow:hidden;transition:transform .28s cubic-bezier(.2,.9,.2,1), box-shadow .28s;
-      display:flex;flex-direction:column;gap:.6rem
-    }
-    .card:hover{transform:translateY(-8px);box-shadow:0 18px 36px rgba(88,66,50,0.12)}
-    .thumb{height:220px;border-radius:12px;background:linear-gradient(180deg, rgba(0,0,0,0.03), rgba(0,0,0,0.02));display:flex;align-items:center;justify-content:center;position:relative;overflow:hidden}
-    .thumb img{max-width:100%;max-height:100%;object-fit:cover;transition:transform .6s}
-    .card:hover .thumb img{transform:scale(1.05) rotate(-1deg)}
-
-    .meta{display:flex;align-items:center;justify-content:space-between}
-    .title{font-weight:700}
-    .price{font-weight:800;color:var(--brown-dark)}
-
-    .actions{display:flex;gap:.5rem}
-    .btn-outline{background:transparent;border:1px solid rgba(90,63,43,0.08);padding:.5rem .6rem;border-radius:10px;cursor:pointer}
-
-    /* modal */
-    .modal-backdrop{position:fixed;inset:0;background:rgba(16,16,16,0.45);display:none;align-items:center;justify-content:center;padding:2rem}
-    .modal{background:var(--white);border-radius:12px;max-width:900px;width:100%;display:grid;grid-template-columns:1fr 1fr;gap:1rem;padding:1rem}
-    .modal .big-image{height:420px;border-radius:10px;background:var(--glass);display:flex;align-items:center;justify-content:center}
-    .modal .big-image img{max-width:100%;max-height:100%;object-fit:cover}
-    .modal .info{padding:1rem 0}
-    .close{position:absolute;right:1rem;top:1rem;background:transparent;border:0;font-size:20px;cursor:pointer}
-
-    .empty{padding:3rem;text-align:center;color:var(--muted)}
-
-    /* simple flying to cart animation helper */
-    .flying{position:fixed;z-index:9999;pointer-events:none;transition:transform .7s cubic-bezier(.2,.9,.2,1),opacity .7s}
-
-    /* responsive tweaks */
-    @media (max-width:900px){
-      .modal{grid-template-columns:1fr}
-      .search{width:220px}
-    }
-
-    /* micro animated entrance */
-    .card{opacity:0;transform:translateY(10px);animation:pop .5s forwards;}
-    @keyframes pop{to{opacity:1;transform:none}}
-
-  </style>
+  <title>Lumbung Beku — Simpan Rasa, Simpan Kebaikan</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
+  <audio id="bgm" src="assets/bgm.wav" loop></audio>
+
+  <header class="site-header">
     <div class="brand">
-      <div class="logo">JB</div>
-      <div>
-        <h1>Jalanan.Baju</h1>
-        <p>Toko baju modern — koleksi harian</p>
-      </div>
+      <h1>Lumbung Beku</h1>
+      <p class="slogan">Simpan rasa, simpan kebaikan</p>
     </div>
-
-    <div class="controls">
-      <div class="search">
-        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden><path d="M21 21l-4.35-4.35" stroke="#9b8b80" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"></path><circle cx="11" cy="11" r="6" stroke="#9b8b80" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"></circle></svg>
-        <input id="search" placeholder="Cari baju, warna, kategori..." />
-      </div>
-
-      <div class="filters" id="categoryFilters">
-        <button class="chip active" data-cat="all">Semua</button>
-        <button class="chip" data-cat="pria">Pria</button>
-        <button class="chip" data-cat="wanita">Wanita</button>
-        <button class="chip" data-cat="anak">Anak</button>
-      </div>
-
-      <div class="cart" id="cartBtn" title="Lihat keranjang">
-        <svg width="20" height="20" viewBox="0 0 24 24" fill="none"><path d="M6 6h15l-1.5 9h-12L4 4H2" stroke="#7a5a44" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round"/></svg>
-        <span>Keranjang</span>
-        <div class="count" id="cartCount">0</div>
-      </div>
-
-    </div>
+    <nav class="nav">
+      <button id="cartBtn" class="cart-btn">Keranjang (<span id="cartCount">0</span>)</button>
+    </nav>
   </header>
 
-  <main>
+  <main class="container">
     <section class="hero">
-      <div class="text">
-        <h2>Koleksi Terbaru — Pilihan Cerah untuk Harimu</h2>
-        <p>Warna-warna hangat, bahan nyaman, dan desain simpel. Klik gambar untuk melihat detail atau tambahkan ke keranjang.</p>
+      <div class="slider" id="slider">
+        <div class="slide active"><img src="assets/slide1.svg" alt="Promo 1"><div class="caption">Promo: Paket Hemat Ayam Potong</div></div>
+        <div class="slide"><img src="assets/slide2.svg" alt="Promo 2"><div class="caption">Segar dari Lumbung — Ikan Beku Premium</div></div>
+        <div class="slide"><img src="assets/slide3.svg" alt="Promo 3"><div class="caption">Sayur Beku Organik</div></div>
       </div>
-      <div>
-        <button class="btn" id="showAll">Tampilkan Semua</button>
+      <div class="hero-actions">
+        <button id="playBgm" class="btn">Play BGM</button>
+        <button id="pauseBgm" class="btn secondary">Pause BGM</button>
       </div>
     </section>
 
-    <section id="productArea">
+    <section class="products" id="products">
+      <h2>Produk Populer</h2>
       <div class="grid" id="productGrid">
-        <!-- produk akan dirender di sini oleh JS -->
+        <!-- Products injected by JS -->
       </div>
-      <div id="empty" class="empty" style="display:none">Tidak ada produk yang cocok 😅</div>
     </section>
   </main>
 
-  <!-- modal quick view -->
-  <div class="modal-backdrop" id="modal">
-    <div class="modal" role="dialog" aria-modal="true">
-      <button class="close" id="closeModal">✕</button>
-      <div class="big-image"><img id="modalImg" src="" alt="Produk" /></div>
-      <div class="info">
-        <h3 id="modalTitle">Nama Produk</h3>
-        <p id="modalDesc" style="color:var(--muted)"></p>
-        <p style="margin-top:1rem;font-weight:700;font-size:20px" id="modalPrice">Rp0</p>
-        <div style="margin-top:1rem;display:flex;gap:.5rem;align-items:center">
-          <button class="btn" id="addToCartModal">Tambah ke Keranjang</button>
-          <button class="btn-outline" id="favoriteBtn">♡ Favorit</button>
-        </div>
-      </div>
+  <aside id="cartPanel" class="cart-panel hidden" aria-hidden="true">
+    <h3>Keranjangmu</h3>
+    <div id="cartItems"></div>
+    <div class="cart-footer">
+      <div class="total">Total: <span id="cartTotal">Rp0</span></div>
+      <button id="checkoutBtn" class="btn primary">Checkout</button>
+      <button id="closeCart" class="btn secondary">Tutup</button>
+    </div>
+  </aside>
+
+  <div id="modal" class="modal hidden" aria-hidden="true">
+    <div class="modal-content">
+      <button id="closeModal" class="close">×</button>
+      <h3>Checkout</h3>
+      <form id="checkoutForm">
+        <label>Nama</label>
+        <input type="text" id="buyerName" required value="Nazhifa Wardah">
+        <label>Alamat</label>
+        <input type="text" id="buyerAddress" required placeholder="Contoh: Jalan Kebon Jeruk No.1">
+        <label>No. HP</label>
+        <input type="tel" id="buyerPhone" required placeholder="08xxxxxxxx">
+        <h4>Ringkasan Pesanan</h4>
+        <div id="summary"></div>
+        <button type="submit" class="btn primary">Konfirmasi & Bayar</button>
+      </form>
     </div>
   </div>
 
-  <script>
-    // sample data — ganti dengan data nyata jika perlu
-    const PRODUCTS = [
-      {id:1,name:'Kaos Basic Cream',cat:'pria',price:129000,desc:'Kaos cotton combed, nyaman untuk sehari-hari.',img:'https://images.unsplash.com/photo-1520975911115-2f0a05a3b3e8?q=80&w=1400&auto=format&fit=crop&ixlib=rb-4.0.3&s=12e2a3f0a0f2c8f9812b9a4d8f1b3cde'},
-      {id:2,name:'Kemeja Linen Coklat',cat:'pria',price:249000,desc:'Kemeja linen ringan, cocok untuk acara kasual.',img:'https://images.unsplash.com/photo-1593032465172-3f3a9b5e0f4b?q=80&w=1400&auto=format&fit=crop&ixlib=rb-4.0.3&s=243e3e8fbd2b9d9c1a2b6d3f5f9e9a1b'},
-      {id:3,name:'Dress Santai Putih',cat:'wanita',price:199000,desc:'Dress dengan potongan A-line, mudah dipadukan.',img:'https://images.unsplash.com/photo-1520975911115-2f0a05a3b3e8?q=80&w=1400&auto=format&fit=crop&ixlib=rb-4.0.3&s=12e2a3f0a0f2c8f9812b9a4d8f1b3cde'},
-      {id:4,name:'Sweater Anak Cream',cat:'anak',price:99000,desc:'Sweater lembut untuk anak-anak, mudah dicuci.',img:'https://images.unsplash.com/photo-1541099649105-f69ad21f3246?q=80&w=1400&auto=format&fit=crop&ixlib=rb-4.0.3&s=1a5c6d7e8f9e0a1b2c3d4e5f6a7b8c9d'},
-      {id:5,name:'Rok Mini Coklat',cat:'wanita',price:139000,desc:'Rok mini modern, nyaman dan stylish.',img:'https://images.unsplash.com/photo-1503342217505-b0a15ec3261c?q=80&w=1400&auto=format&fit=crop&ixlib=rb-4.0.3&s=6f1b2c3d4e5f6a7b8c9d0e1f2a3b4c5d'},
-      {id:6,name:'Hoodie Cozy',cat:'pria',price:179000,desc:'Hoodie tebal dengan detail jahitan rapi.',img:'https://images.unsplash.com/photo-1520975911115-2f0a05a3b3e8?q=80&w=1400&auto=format&fit=crop&ixlib=rb-4.0.3&s=12e2a3f0a0f2c8f9812b9a4d8f1b3cde'}
-    ];
+  <footer class="site-footer">
+    <p>© Lumbung Beku — Simpan rasa, simpan kebaikan</p>
+    <p>Website ringan untuk toko frozen food — dibuat oleh tim kreatif.</p>
+  </footer>
 
-    const grid = document.getElementById('productGrid');
-    const empty = document.getElementById('empty');
-    const searchInput = document.getElementById('search');
-    const filters = document.getElementById('categoryFilters');
-    const cartCount = document.getElementById('cartCount');
-    const modal = document.getElementById('modal');
-    const modalImg = document.getElementById('modalImg');
-    const modalTitle = document.getElementById('modalTitle');
-    const modalDesc = document.getElementById('modalDesc');
-    const modalPrice = document.getElementById('modalPrice');
-    const addToCartModal = document.getElementById('addToCartModal');
-    const closeModal = document.getElementById('closeModal');
-
-    let activeCat = 'all';
-    let cart = [];
-
-    // helper number format
-    function rupiah(n){
-      return new Intl.NumberFormat('id-ID',{style:'currency',currency:'IDR'}).format(n).replace(',00','');
-    }
-
-    function renderProducts(list){
-      grid.innerHTML='';
-      if(list.length===0){ empty.style.display='block'; return }
-      empty.style.display='none';
-      list.forEach((p, i)=>{
-        const card = document.createElement('article');
-        card.className='card';
-        card.style.animationDelay = (i*60)+'ms';
-        card.innerHTML = `
-          <div class="thumb" data-id="${p.id}"><img src="${p.img}" alt="${p.name}"></div>
-          <div class="meta">
-            <div>
-              <div class="title">${p.name}</div>
-              <div style="font-size:13px;color:var(--muted)">${p.cat.toUpperCase()}</div>
-            </div>
-            <div class="price">${rupiah(p.price)}</div>
-          </div>
-          <div style="display:flex;justify-content:space-between;align-items:center;margin-top:.5rem">
-            <div style="font-size:13px;color:var(--muted)">${p.desc.substring(0,50)}${p.desc.length>50? '...':''}</div>
-            <div class="actions">
-              <button class="btn-outline" data-action="view" data-id="${p.id}">Lihat</button>
-              <button class="btn" data-action="add" data-id="${p.id}">Tambah</button>
-            </div>
-          </div>
-        `;
-
-        grid.appendChild(card);
-      });
-    }
-
-    // initial render
-    renderProducts(PRODUCTS);
-
-    // search & filter logic
-    function applyFilters(){
-      const q = searchInput.value.trim().toLowerCase();
-      let filtered = PRODUCTS.filter(p=>{
-        const matchCat = (activeCat==='all') || p.cat===activeCat;
-        const matchQuery = q === '' || p.name.toLowerCase().includes(q) || p.desc.toLowerCase().includes(q) || p.cat.toLowerCase().includes(q);
-        return matchCat && matchQuery;
-      });
-      renderProducts(filtered);
-    }
-
-    searchInput.addEventListener('input',()=> applyFilters());
-
-    filters.addEventListener('click', (e)=>{
-      const btn = e.target.closest('button'); if(!btn) return;
-      [...filters.querySelectorAll('.chip')].forEach(c=>c.classList.remove('active'));
-      btn.classList.add('active');
-      activeCat = btn.dataset.cat;
-      applyFilters();
-    })
-
-    // delegate clicks in product grid
-    grid.addEventListener('click', (e)=>{
-      const action = e.target.closest('button')?.dataset?.action;
-      const id = e.target.closest('[data-id]')?.dataset?.id || e.target.closest('button')?.dataset?.id;
-      if(!action || !id) return;
-      const product = PRODUCTS.find(p=>p.id==id);
-      if(action==='view') openModal(product);
-      if(action==='add') addToCart(product, e);
-    })
-
-    // click image to open modal
-    grid.addEventListener('click', (e)=>{
-      const thumb = e.target.closest('.thumb');
-      if(!thumb) return;
-      const id = thumb.dataset.id; const product = PRODUCTS.find(p=>p.id==id);
-      openModal(product);
-    })
-
-    // modal functions
-    function openModal(product){
-      modalImg.src = product.img;
-      modalTitle.textContent = product.name;
-      modalDesc.textContent = product.desc;
-      modalPrice.textContent = rupiah(product.price);
-      addToCartModal.dataset.id = product.id;
-      modal.style.display='flex';
-    }
-    closeModal.addEventListener('click', ()=> modal.style.display='none');
-    modal.addEventListener('click', (e)=>{ if(e.target===modal) modal.style.display='none' });
-
-    addToCartModal.addEventListener('click', (e)=>{
-      const id = e.target.dataset.id; const product = PRODUCTS.find(p=>p.id==id);
-      addToCart(product, e);
-    })
-
-    // add to cart with flying animation
-    function addToCart(product, event){
-      cart.push(product);
-      cartCount.textContent = cart.length;
-
-      // flying image
-      const img = document.createElement('img');
-      img.src = product.img; img.className='flying'; img.style.width='80px'; img.style.height='80px'; img.style.borderRadius='8px';
-      document.body.appendChild(img);
-
-      const rectFrom = (event.target.closest('.card')||event.target).getBoundingClientRect?.() || {left:100,top:100,width:80,height:80};
-      const cartBtn = document.getElementById('cartBtn').getBoundingClientRect();
-      img.style.left = (rectFrom.left + rectFrom.width/2 - 40) + 'px';
-      img.style.top = (rectFrom.top + rectFrom.height/2 - 40) + 'px';
-
-      requestAnimationFrame(()=>{
-        img.style.transform = `translate(${cartBtn.left - rectFrom.left}px, ${cartBtn.top - rectFrom.top}px) scale(.15)`;
-        img.style.opacity = '0.2';
-      })
-      setTimeout(()=> img.remove(), 800);
-
-      // little bounce on cart
-      const cartEl = document.getElementById('cartBtn');
-      cartEl.animate([
-        { transform: 'translateY(0)' },
-        { transform: 'translateY(-6px)' },
-        { transform: 'translateY(0)' }
-      ], { duration: 420, easing: 'cubic-bezier(.2,.9,.2,1)' });
-    }
-
-    // show all button
-    document.getElementById('showAll').addEventListener('click', ()=>{
-      searchInput.value=''; activeCat='all'; [...filters.querySelectorAll('.chip')].forEach(c=>c.classList.remove('active')); filters.querySelector('[data-cat="all"]').classList.add('active'); applyFilters();
-      window.scrollTo({top:document.getElementById('productArea').offsetTop-10, behavior:'smooth'});
-    })
-
-    // small accessibility: trap keyboard
-    document.addEventListener('keydown', (e)=>{
-      if(e.key==='Escape') modal.style.display='none';
-    })
-
-  </script>
+  <script src="app.js"></script>
 </body>
 </html>
